@@ -6,6 +6,9 @@ also does PDF::COS::Tie::Hash;
 use ISO_32000::Table_246-Entries_in_an_FDF_field_dictionary;
 also does ISO_32000::Table_246-Entries_in_an_FDF_field_dictionary;
 
+use ISO_32000_2::Table_249-Entries_in_an_FDF_field_dictionary;
+also does ISO_32000_2::Table_249-Entries_in_an_FDF_field_dictionary;
+
 =begin pod
 =head1 role FDF::Field
 
