@@ -6,6 +6,9 @@ also does PDF::COS::Tie::Hash;
 use ISO_32000::Table_196-Entries_in_a_form_fields_additional-actions_dictionary;
 also does  ISO_32000::Table_196-Entries_in_a_form_fields_additional-actions_dictionary;
 
+use ISO_32000_2::Table_199-Entries_in_a_form_fields_additional-actions_dictionary;
+also does ISO_32000_2::Table_199-Entries_in_a_form_fields_additional-actions_dictionary;
+
 =begin pod
 
 =head1 Description
