@@ -1,4 +1,6 @@
 {{$NEXT}}
+   - Perform ISO::32000 (PDF 1.7) and ISO::32000_2 (PDF 2.0) roles.
+   - Fixed one typo in FDF::Field entries: $.ApRef -> $.APRef
 
 0.0.3  2022-06-09T15:32:45+12:00
    - upload to zef ecosystem
